--- a/client/templates/book.html
+++ b/client/templates/book.html
@@ -12,7 +12,6 @@
     <form method="POST" action="{% url 'book' %}">
         {% csrf_token %}
         {{ form.non_field_errors }}
-
         <!-- Choose Vehicle & Add Vehicle -->
         <div class="grid md:grid-cols-2 gap-8 mb-10">
             <!-- Choose Vehicle -->
@@ -41,7 +40,7 @@
                     <p class="text-slate-400 mb-4">if you don't have EV vehicle</p>
                 </div>
                 <a href="{% url 'add_vehicle' %}">
-                    <button type="button" class="px-6 py-3 border-2 border-slate-400 text-white rounded-xl font-medium hover:bg-slate-800 transition-colors">
+                    <button type="button" class="px-6 py-3 border-2 border-slate-400 text-white rounded-xl font-medium hover:bg-slate-800 transition-colors cursor-pointer">
                         Add new vehicle
                     </button>
                 </a>
